--- a/index.html
+++ b/index.html
@@ -125,31 +125,25 @@
 
 
 
-        <!-- Two -->
-        <section id="two">
-          <div class="inner">
-            <header class="major">
-              <h2>Massa libero</h2>
-            </header>
-            <p>
-              Nullam et orci eu lorem consequat tincidunt vivamus et sagittis
-              libero. Mauris aliquet magna magna sed nunc rhoncus pharetra.
-              Pellentesque condimentum sem. In efficitur ligula tate urna.
-              Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor.
-              Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis
-              libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra
-              et feugiat tempus.
-            </p>
-            <ul class="actions">
-              <li>
-                <a href="landing.html" class="button next"></a>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+      <!-- Two -->
+<section id="two">
+  <!-- Trigger/Button to Open Modal -->
+  <div class="heartcontainer">
+    <button class="heart-button" id="openModal"><i class="fa fa-heart"></i></button>
+  </div>
+  
+  <!-- The Modal -->
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Why Dr. Bailey Resonates with Me</h2>
+      <p>Dr. Bailey’s approach transcends the conventional boundaries of medicine, extending into the realm of genuine compassion and understanding. Her practice isn't merely a professional duty; it is a heartfelt commitment to the well-being of every individual she encounters. With every interaction, she affirms the inherent value of personalized care, making each of us feel seen, heard, and valued—not as just another patient, but as a unique individual with hopes, fears, and dreams. This deeply human touch is why her influence is so profound and why she resonates with me on a level beyond mere appreciation—it’s an embodiment of the care we all yearn for in our moments of vulnerability.</p>
+
     </div>
-    </section>
+  </div>
+  
+</section>
+
 <section id="journey">
   <h1 class="journey-title">Dr. Trisha's Journey</h1>
   <p class="journey-intro">A reflection on the milestones and achievements that mark her legacy.</p>
