--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <h2>Why Dr. Bailey Resonates with Me</h2>
-      <p>Dr. Bailey’s approach transcends the conventional boundaries of medicine, extending into the realm of genuine compassion and understanding. Her practice isn't merely a professional duty; it is a heartfelt commitment to the well-being of every individual she encounters. With every interaction, she affirms the inherent value of personalized care, making each of us feel seen, heard, and valued—not as just another patient, but as a unique individual with hopes, fears, and dreams. This deeply human touch is why her influence is so profound and why she resonates with me on a level beyond mere appreciation—it’s an embodiment of the care we all yearn for in our moments of vulnerability.</p>
+      <p>Dr. Bailey's blend of empathy and expertise inspires me as a tech student, showing the transformative power of personal touch in any field, including tech. Her approach is a reminder that compassion can elevate technology's impact. </p>
 
     </div>
   </div>
