--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 </section>
 
 <section id="journey">
-  <h1 class="journey-title">Dr. Trisha's Journey</h1>
+  <h1 class="journey-title">Dr. Bailey’s Journey</h1>
   <p class="journey-intro">A reflection on the milestones and achievements that mark her legacy.</p>
   <ul class="timeline">
     <li style="--accent-color:#41516C">
